2026-01-30  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.1.1 released

2026-01-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (External methods): Mention, how external methods are
	used for multi-hops.
	(Ad-hoc multi-hops): Change requirement of method.

2025-12-31  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.1 released

2025-12-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (FUSE setup): Extend rclone setup section.

2025-12-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Remote processes): Provide more details in "Running
	remote processes on MS Windows hosts".

2025-12-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Remote processes): Provide more details in "Running
	remote processes on MS Windows hosts".

2025-12-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Frequently Asked Questions)
	(New operations): Mention tramp-hlo, again.

2025-12-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Remote processes): Rewrite subsection "Running
	remote processes on MS Windows hosts".

2025-11-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.0.5 released

2025-11-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Remote processes): Improve description where direct
	asyn processes won't work.

2025-11-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (New operations): Mention tramp-expand-script.

2025-11-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Frequently Asked Questions): Don't mention Windows
	7/8, they are obsolete now.  Improve "speed up" item.

2025-10-30  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.0.4 released

2025-10-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Configuration): Extend example.

2025-10-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Inline methods): Add "surs" and "sudors" methods.

2025-09-29  Michael Albinus  <michael.albinus@gmx.de>
