@@ -1,3 +1,11 @@
+2026-02-03  Michael Albinus  <michael.albinus@gmx.de>
+
+	* .gitignore: Add *.ps.
+
+	* Makefile.in (.PHONY):  Add prerequisite `ps'.
+	(all): Remove prerequisite 'dvi'.
+	(ps tramp.ps): New targets.
+
 2026-01-30  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.8.1.1 released
